--- a/Xtt2Fragment/build.gradle
+++ b/Xtt2Fragment/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "xtt2android.pl.edu.agh.eis.xtt2android"
         minSdkVersion 17
         targetSdkVersion 23
         versionCode 1
